реорганизация файлов проекта

--- a/watchdog.vcxproj
+++ b/watchdog.vcxproj
@@ -170,17 +170,17 @@
     <ClCompile Include="app.cpp" />
     <ClCompile Include="console.cpp" />
     <ClCompile Include="monitor.cpp" />
-    <ClCompile Include="types.cpp" />
+    <ClCompile Include="utils\types.cpp" />
+    <ClCompile Include="utils\winapi.cpp" />
     <ClCompile Include="watchdog.cpp" />
-    <ClCompile Include="winapi.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="app.h" />
     <ClInclude Include="config.h" />
     <ClInclude Include="console.h" />
     <ClInclude Include="monitor.h" />
-    <ClInclude Include="types.h" />
-    <ClInclude Include="winapi.h" />
+    <ClInclude Include="utils\types.h" />
+    <ClInclude Include="utils\winapi.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
