--- a/watchdog.vcxproj
+++ b/watchdog.vcxproj
@@ -74,6 +74,7 @@
     <LinkIncremental>true</LinkIncremental>
     <OutDir>$(SolutionDir)..\..\build-results\x32-debug\</OutDir>
     <IntDir>$(SolutionDir)..\..\build-results\x32-debug\temp\</IntDir>
+    <PostBuildEventUseInBuild>false</PostBuildEventUseInBuild>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
